--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<div id="CarsEdit" class="screen">
 		<h2>New Car</h2>
 		<form id="carForm">
-			<input id="inputCarId" type="hidden" name="id" value="0" />
+			<input id="inputCarId" type="number" name="id" value="0" />
 			<input id="inputCarName" type="text" name="name" />
 			<input type="button" value="add/save" onclick="saveCar();" />
 		</form>
