--- a/index.html
+++ b/index.html
@@ -43,11 +43,25 @@
 			//var form = O.id("carForm").serialize();//.serializeArray();
 			var form = {
 				"table" : "cars",
-				"id" : parseInt(O.id('inputCarId').value),
-				"name" : O.id('inputCarName').value
+				"id" : parseInt(O.id('inputCarEditId').value),
+				"name" : O.id('inputCarEditName').value
         		};
 			LStorage.set(form, function(){
 				ReloadCars();
+				showScreen("CarsList");
+			});
+		}
+
+		function addCar(){
+			//var form = O.id("carForm").serialize();//.serializeArray();
+			var form = {
+				"table" : "cars",
+				"id" : parseInt(O.id('inputCarAddId').value),
+				"name" : O.id('inputCarAddName').value
+        		};
+			LStorage.set(form, function(){
+				ReloadCars();
+				showScreen("CarsList");
 			});
 		}
 
@@ -60,9 +74,15 @@
 
 		function EditCar(id){
 			LStorage.get({"table":"cars", "id": id},function(dataObj){
-				O.id('inputCarId').value = dataObj.id;
-				O.id('inputCarName').value = dataObj.name;
+				O.id('inputCarEditId').value = dataObj.id;
+				O.id('inputCarEditName').value = dataObj.name;
+				O.id('spanCarEditName').innerHTML = dataObj.name;
+				showScreen("CarsEdit");
 			});
+		}
+
+		function NewCar(id){
+			showScreen("CarsNew");
 		}
 
 		function DeleteCar(id){
@@ -95,9 +115,9 @@
 		<ul>
 			<li><a href="javascript:showScreen('DashBoard');">Home</a></li>
 			<li><a href="javascript:showScreen('CarsList');">Cars</a></li>
-			<li><a href="javascript:showScreen('CarsEdit');">New car</a></li>
+			<!--<li><a href="javascript:showScreen('CarsEdit');">New car</a></li>
 			<li><a href="javascript:showScreen('PlayersList');">Players</a></li>
-			<li><a href="javascript:showScreen('PlayersEdit');">New Player</a></li>
+			<li><a href="javascript:showScreen('PlayersEdit');">New Player</a></li>-->
 		</ul>
 	</nav>
 	<div class="center">
@@ -106,37 +126,90 @@
 			
 		</section>
 		<section id="CarsList" class="screen">
-			<h2>Cars</h2>
-			<div class="table-wrapper">
-				<div class="table-responsive">
-					<table class="table table-condensed">
-						<thead>
-							<tr>
-								<th>Id</th>
-								<th>Name</th>
-							</tr>
-						</thead>
-						<tbody id="CarsListTable">
-							
-						</tbody>
-					</table>
+			<div class="container-fluid">
+  				<div class="row">
+  					<div class="col-md-4">
+  						<h3>Cars Menu</h3>
+  						<ul>
+  							<li><a href="javascript:showScreen('CarsList');">All cars</a></li>
+  							<li><a href="javascript:showScreen('CarsNew');">New car</a></li>
+  						</ul>
+  					</div>
+					<div class="col-md-8">
+						<h2>Cars</h2>
+						<div class="table-wrapper">
+							<div class="table-responsive">
+								<table class="table table-condensed">
+									<thead>
+										<tr>
+											<th>Id</th>
+											<th>Name</th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody id="CarsListTable">
+										
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>	
 		</section>
 		<section id="CarsEdit" class="screen">
-			<h2>New Car</h2>
-			<form id="carForm" role="form">
-				<div class="form-group">
-					<label class="sr-only" for="inputCarId">Email address</label>
-					<input type="email" class="form-control" id="inputCarId" value="0" placeholder="Enter carId or 0">
+			<div class="container-fluid">
+  				<div class="row">
+  					<div class="col-md-4">
+  						<h3>Cars Menu</h3>
+  						<ul>
+  							<li><a href="javascript:showScreen('CarsList');">All cars</a></li>
+  							<li><a href="javascript:showScreen('CarsNew');">New car</a></li>
+  						</ul>
+  					</div>
+					<div class="col-md-8">
+						<h2>Edit Car <span id="spanCarEditName"></span></h2>
+						<form id="carFormEdit" role="form">
+							<div class="form-group">
+								<label class="sr-only" for="inputCarEditId">Email address</label>
+								<input type="email" class="form-control" id="inputCarEditId" placeholder="Enter carId or 0">
+							</div>
+							<div class="form-group">
+								<label class="sr-only" for="inputCarEditName">Email address</label>
+								<input type="text" class="form-control" id="inputCarEditName" placeholder="Enter carName">
+							</div>
+							<input type="button" value="add/save" class="btn btn-default" onclick="saveCar();" />
+						</form>
+					</div>
 				</div>
-				<div class="form-group">
-					<label class="sr-only" for="inputCarName">Email address</label>
-					<input type="text" class="form-control" id="inputCarName" placeholder="Enter carName">
-				</div>
-				<input type="button" value="add/save" class="btn btn-default" onclick="saveCar();" />
-			</form>
+			</div>				
 		</section>
+		<section id="CarsNew" class="screen">
+			<div class="container-fluid">
+  				<div class="row">
+  					<div class="col-md-4">
+  						<h3>Cars Menu</h3>
+  						<ul>
+  							<li><a href="javascript:showScreen('CarsList');">All cars</a></li>
+  							<li><a href="javascript:showScreen('CarsNew');">New car</a></li>
+  						</ul>
+  					</div>
+					<div class="col-md-8">
+						<h2>New Car</h2>
+						<form id="carFormAdd" role="form">
+							<input type="hidden" id="inputCarAddId" value="0" />
+
+							<div class="form-group">
+								<label class="sr-only" for="inputCarAddName">Email address</label>
+								<input type="text" class="form-control" id="inputCarAddName" placeholder="Enter carName">
+							</div>
+							<input type="button" value="add/save" class="btn btn-default" onclick="addCar();" />
+						</form>
+					</div>
+				</div>
+			</div>			
+		</section>
+
 		<section id="PlayersList" class="screen">
 			<h2>Player</h2>
 
