add js clone function

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 		---------------------------------- */
 
 		function clone(obj){
-			var a = JSON.parse(JSON.stringify(obj));
-			return a;
+			return JSON.parse(JSON.stringify(obj));
 		}
 
 	/*	----------------------------------
