--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 
 			Ajax = new AJAX();
-			Ajax.post('http://goodle.sk','auto=green', function(r){console.log(r);}, function(r){console.log(r);});
+			Ajax.post('http://html5app-jsengine.localhost:8080/remoteApi/','auto=green', function(r){console.log(r);}, function(r){console.log(r);});
 
 
 			setTimeout(function(){
